--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "build": "webpack"
   },
   "devDependencies": {
+    "eslint": "^8.39.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   }
